# symfit

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  DOCKER_DEVELOPMENT.md  DOCKER_INTEGRATION_STATUS.md  Dockerfile  Dockerfile.dev  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS_SUMMARY.md  Makefile.objs  Makefile.target  PLUGIN_INTEGRATION_GUIDE.md  PLUGIN_QUICKSTART.md  PLUGIN_SYSTEM_COMPLETE.md  PLUGIN_SYSTEM_INDEX.md  PLUGIN_TESTING_GUIDE.md  README.md  SESSION_SUMMARY.md  SymFit_usage_guide.md  build.sh  configure  design.md  docker-compose.yml  exec.c  ia-rpc-softmmu.c  javascript_plugin_implementation_plan.md  maze_solution_documentation.md  pyproject.toml  qemu-options.hx  run-test-campaign.js  symfit_maze_improvements.md  test-mcp-direct.sh  vl.c
docs/: interactive_scripting_contract.md  project_plan.md
driver/: CMakeLists.txt  fgtest.cpp
dynamiq/: .gitignore  README.md  pyproject.toml
examples/: demo_live_session.py  demo_qemu_rpc_m1.py  instrumentation_sidecar.py  script_automated_testing.py  script_security_analysis.py
include/: symfit-plugin-global.h
linux-user/: Makefile.objs  elfload.c  exit.c  ia-rpc.c  ia-rpc.h  main.c  signal.c  syscall.c
mcp-server/: .gitignore  CHANGELOG.md  DOCKER-SETUP.md  EXAMPLES.md  QUICKSTART.md  README.md  STDIN-USAGE.md  VSCODE-SETUP.md  example-config.json  index.js  package-lock.json  package.json  test-custom-filename.sh  test-docker.sh  test-server.sh  test-stdin.sh
patches/: COMMIT_GUIDE.txt  PATCH_SUMMARY.md  README.md  apply-patches.sh  symcc-llvm14-compat.patch  (+1 more)
symsan/libcxx/: CMakeLists.txt
(+177 files in other folders)
